Added vagrant node to database example config

--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -8,6 +8,11 @@ default: &default
   username: root
   password: root
 
+vagrant: &vagrant
+  <<: *default
+  username: vagrant
+  password: vagrant
+
 development:
   <<: *default
   database: crammer_development
